tests/focus_check/focus_check.exp

Stop any already-running server.
Full check:
Error ------------------------------------------------------------------------------------------------ dependency.js:3:1

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-type]

   dependency.js:3:1
   3| "" as number; // Error: string is not a number
      ^^ [1]

References:
   dependency.js:3:7
   3| "" as number; // Error: string is not a number
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- dependent.js:5:1

Cannot cast `main` to string because number [1] is incompatible with string [2]. [incompatible-type]

   dependent.js:5:1
   5| main as string; // Error: main is a number, not a string
      ^^^^

References:
   main.js:7:20
   7| export const main: number = 1;
                         ^^^^^^ [1]
   dependent.js:5:9
   5| main as string; // Error: main is a number, not a string
              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   dir/test2.foo:4:5
   4| x = 3 + "string";
          ^^^^^^^^^^^^ [1]

References:
   dir/test2.foo:3:8
   3| var x: number = 3;
             ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ main.js:5:1

Cannot cast `dep` to number because string [1] is incompatible with number [2]. [incompatible-type]

   main.js:5:1
   5| dep as number; // Error: dep is a string, not a number
      ^^^

References:
   dependency.js:5:19
   5| export const dep: string = "";
                        ^^^^^^ [1]
   main.js:5:8
   5| dep as number; // Error: dep is a string, not a number
             ^^^^^^ [2]


Error ------------------------------------------------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   other_root/other_root_file.js:3:17
   3| var x: string = 123; // Error
                      ^^^ [1]

References:
   other_root/other_root_file.js:3:8
   3| var x: string = 123; // Error
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      


Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:3:1
   3| "" as number;
      ^^ [1]

References:
   test.js:3:7
   3| "" as number;
            ^^^^^^ [2]



Found 7 errors

Focused check on main.js (expect errors in main.js + dependent.js, but NOT dependency.js):
Error ------------------------------------------------------------------------------------------------- dependent.js:5:1

Cannot cast `main` to string because number [1] is incompatible with string [2]. [incompatible-type]

   dependent.js:5:1
   5| main as string; // Error: main is a number, not a string
      ^^^^

References:
   main.js:7:20
   7| export const main: number = 1;
                         ^^^^^^ [1]
   dependent.js:5:9
   5| main as string; // Error: main is a number, not a string
              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ main.js:5:1

Cannot cast `dep` to number because string [1] is incompatible with number [2]. [incompatible-type]

   main.js:5:1
   5| dep as number; // Error: dep is a string, not a number
      ^^^

References:
   dependency.js:5:19
   5| export const dep: string = "";
                        ^^^^^^ [1]
   main.js:5:8
   5| dep as number; // Error: dep is a string, not a number
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      



Found 3 errors

Focused check on dependency.js (expect errors in dependency.js + main.js, but NOT dependent.js):
Error ------------------------------------------------------------------------------------------------ dependency.js:3:1

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-type]

   dependency.js:3:1
   3| "" as number; // Error: string is not a number
      ^^ [1]

References:
   dependency.js:3:7
   3| "" as number; // Error: string is not a number
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ main.js:5:1

Cannot cast `dep` to number because string [1] is incompatible with number [2]. [incompatible-type]

   main.js:5:1
   5| dep as number; // Error: dep is a string, not a number
      ^^^

References:
   dependency.js:5:19
   5| export const dep: string = "";
                        ^^^^^^ [1]
   main.js:5:8
   5| dep as number; // Error: dep is a string, not a number
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      



Found 3 errors

Focused check on dependent.js (expect errors in dependent.js only, no dependents):
Error ------------------------------------------------------------------------------------------------- dependent.js:5:1

Cannot cast `main` to string because number [1] is incompatible with string [2]. [incompatible-type]

   dependent.js:5:1
   5| main as string; // Error: main is a number, not a string
      ^^^^

References:
   main.js:7:20
   7| export const main: number = 1;
                         ^^^^^^ [1]
   dependent.js:5:9
   5| main as string; // Error: main is a number, not a string
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      



Found 2 errors

Focused check on a file with local errors but no dependency or reverse dependency:
Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      


Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:3:1
   3| "" as number;
      ^^ [1]

References:
   test.js:3:7
   3| "" as number;
            ^^^^^^ [2]



Found 2 errors

Focused check on a file and a directory:
Error ------------------------------------------------------------------------------------------------ dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   dir/test2.foo:4:5
   4| x = 3 + "string";
          ^^^^^^^^^^^^ [1]

References:
   dir/test2.foo:3:8
   3| var x: number = 3;
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      


Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:3:1
   3| "" as number;
      ^^ [1]

References:
   test.js:3:7
   3| "" as number;
            ^^^^^^ [2]



Found 3 errors

Focused check on files specified in list.txt:
Error ------------------------------------------------------------------------------------------------ dependency.js:3:1

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-type]

   dependency.js:3:1
   3| "" as number; // Error: string is not a number
      ^^ [1]

References:
   dependency.js:3:7
   3| "" as number; // Error: string is not a number
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- dependent.js:5:1

Cannot cast `main` to string because number [1] is incompatible with string [2]. [incompatible-type]

   dependent.js:5:1
   5| main as string; // Error: main is a number, not a string
      ^^^^

References:
   main.js:7:20
   7| export const main: number = 1;
                         ^^^^^^ [1]
   dependent.js:5:9
   5| main as string; // Error: main is a number, not a string
              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   dir/test2.foo:4:5
   4| x = 3 + "string";
          ^^^^^^^^^^^^ [1]

References:
   dir/test2.foo:3:8
   3| var x: number = 3;
             ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ main.js:5:1

Cannot cast `dep` to number because string [1] is incompatible with number [2]. [incompatible-type]

   main.js:5:1
   5| dep as number; // Error: dep is a string, not a number
      ^^^

References:
   dependency.js:5:19
   5| export const dep: string = "";
                        ^^^^^^ [1]
   main.js:5:8
   5| dep as number; // Error: dep is a string, not a number
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      



Found 5 errors

Focused check guessing root by looking at first file:
Error --------------------------------------------------------------------------- other_root/other_root_dependent.js:5:1

Cannot cast `foo` to string because number [1] is incompatible with string [2]. [incompatible-type]

   other_root/other_root_dependent.js:5:1
   5| foo as string; // Error
      ^^^

References:
   other_root/other_root_file.js:5:16
   5| export default 123;
                     ^^^ [1]
   other_root/other_root_dependent.js:5:8
   5| foo as string; // Error
             ^^^^^^ [2]


Error ------------------------------------------------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   other_root/other_root_file.js:3:17
   3| var x: string = 123; // Error
                      ^^^ [1]

References:
   other_root/other_root_file.js:3:8
   3| var x: string = 123; // Error
             ^^^^^^ [2]



Found 2 errors

Focused check with explicit root:
Error ------------------------------------------------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   other_root/other_root_file.js:3:17
   3| var x: string = 123; // Error
                      ^^^ [1]

References:
   other_root/other_root_file.js:3:8
   3| var x: string = 123; // Error
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      



Found 2 errors

Focused check with syntax error:
Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input [ParseError]

   4|
      



Found 1 error

Done!
